# diplomacy-cli

./: .gitignore  AGENTS.md  README.md  TODO.md  flake.nix  main.py  pyproject.toml
backend/: README.md  go.mod
backend/cmd/server/: main.go
backend/internal/api/: datc_a_test.go  datc_e_test.go  datc_h_test.go  datc_i_test.go  datc_j_test.go  diplomacy_scenarios_test.go  handlers.go  integration_test.go  resolution_test.go  test_helpers.go
backend/internal/game/: data.go  loader.go  types.go
backend/internal/game/rules/: loader.go  loader_test.go  types.go
backend/internal/storage/: sqlite.go
backend/tests/api/: api_test.go
backend/tests/game/: game_test.go
data/classic/start/: players.json  starting_owners.json  starting_players.json  starting_units.json  territory_state.json  units.json
data/classic/world/: edges.json  home_centers.json  nations.json  territories.json
docs/: ORDER_FORMAT.md
logic/: __init__.py  engine.py  state.py  storage.py  turn_code.py  validator.py
scripts/: extract_datc_tests.py  extract_datc_tests_simple.py
src/diplomacy_cli/: __main__.py
src/diplomacy_cli/cli/ux/: cli.py  pretty.py
src/diplomacy_cli/core/: paths.py
temp_disabled/: datc_b_test.go  datc_c_test.go  datc_d_test.go  datc_f_test.go  datc_g_test.go  datc_i_test.go  resolution_test.go  test_helpers.go
tests/: conftest.py  test_orchestrator.py  test_resolution.py  test_rules_loader.py  test_schema.py  test_semantic.py  test_serialization.py  test_state.py  test_state_io.py  test_storage.py  test_syntax.py  test_turn_code.py
ux/: cli.py  pretty.py
(+19 files in other folders)
