[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diplomacy-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["platformdirs"]

[project.optional-dependencies]
dev = [
	"ruff",
	"pyright",
	"pytest",
	"jsonschema",
	"build"
]

[tool.hatch.build]
dev-mode-dirs = ["src"] 

[tool.hatch.build.targets.wheel]
packages = ["src/diplomacy_cli"]
	
[tool.ruff]
line-length	= 100
target-version	= "py312"
lint.select	= ["E", "F", "I", "UP"]

[tool.pyright]
typeCheckingMode = "basic"
pythonVersion    = "3.12"
include          = ["src", "tests"]
venvPath         = "."
venv             = ".venv"
